--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.0.0-beta.32",
     "babel-eslint": "^8.0.2",
     "core-util-is": "^1.0.2",
+    "electron": "^1.7.9",
     "electron-prebuilt-compile": "^1.7.9",
     "eslint": "^4.11.0",
     "eslint-config-airbnb": "^16.1.0",
