--- a/.eslintrc
+++ b/.eslintrc
@@ -31,10 +31,14 @@
       "jsx": true
     }
   },
-  "env": {
+  "env": { 
     "es6": true,
     "browser": true,
     "node": true,
     "jest": true
+  },
+
+  "globals": {
+    "WebAssembly": true
   }
 }
